feat: Workflow-Definitionen als versionierte Fachdaten (M4.1)
